force-app/main/default/objects/ssot__LocationGroupProdInvChg__dlm/fields/ssot__AvailableToFulfillQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__AvailableToFulfillQuantity__c</fullName>
    <label>Available To Fulfill Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AvailableToFulfillQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>