force-app/main/default/objects/ssot__LocationGroupProdInvChg__dlm/fields/ssot__ExternalLocationGroupIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExternalLocationGroupIdentifier__c</fullName>
    <label>External Location Group Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalLocationGroupIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>