force-app/main/default/objects/ssot__LocationGroupProdInvChg__dlm/fields/ssot__LocationGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LocationGroupId__c</fullName>
    <label>Location Group</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LocationGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>