force-app/main/default/objects/ssot__LocationGroupProdInvChg__dlm/fields/ssot__rel_1708941902240_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1708941902240_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LocationGroupProdInvChg_ProductId_ma_rel</label>
    <referenceTo>ssot__Product__dlm</referenceTo>
    <relationshipLabel>LocationGroupProdInvChg_ProductId_ma_rel</relationshipLabel>
    <relationshipName>rel_1708941902240_end</relationshipName>
    <type>Lookup</type>
</CustomField>