force-app/main/default/objects/ssot__LocationGroupProdInvChg__dlm/fields/ssot__SharedGroupReservedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__SharedGroupReservedQuantity__c</fullName>
    <label>Shared Group Reserved Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SharedGroupReservedQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>